--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tablero Yu-Gi-Oh!</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/custom.css">
-    <link href="./files/ico.png" rel="icon" sizes="any" type="image/svg+xml">
+    <link href="./files/ico.webp" rel="icon" sizes="any" type="image/svg+xml">
     <meta name="description" content="Estilo visual de cada tablero de Yu-Gi-Oh!, se puede visualizar cada versión de este tipo.">
 </head>
 
@@ -245,7 +245,7 @@
                         class="card-yugi shadow-smpl position-relative d-flex justify-content-center align-items-center">
                         <span class="text-cards" style="z-index: 3;">PENDULUM CARDS</span>
                         <span class="position-absolute w-100 h-100 bg-danger bg-opacity-50" style="z-index: 2;"></span>
-                        <img class="object-fit-container w-100 h-100" src="./files/p_der.png" style="z-index: 1;">
+                        <img class="object-fit-container w-100 h-100" src="./files/p_der.webp" style="z-index: 1;">
                     </div>
                     <div class="d-flex gap-2">
                         <div class="container-card">
@@ -288,7 +288,7 @@
                         class="card-yugi shadow-smpl position-relative d-flex justify-content-center align-items-center">
                         <span class="text-cards" style="z-index: 3;">PENDULUM CARDS</span>
                         <span class="position-absolute w-100 h-100 bg-primary bg-opacity-50" style="z-index: 2;"></span>
-                        <img class="object-fit-container w-100 h-100" src="./files/p_izq.png" style="z-index: 1;">
+                        <img class="object-fit-container w-100 h-100" src="./files/p_izq.webp" style="z-index: 1;">
                     </div>
                 </div>
                 <div class="d-flex flex-row gap-2">
@@ -376,7 +376,7 @@
                         class="card-yugi shadow-smpl position-relative d-flex justify-content-center align-items-center">
                         <span class="text-cards" style="z-index: 3;">PENDULUM CARDS</span>
                         <span class="position-absolute w-100 h-100 bg-danger bg-opacity-50" style="z-index: 2;"></span>
-                        <img class="object-fit-container w-100 h-100" src="./files/p_der.png" style="z-index: 1;">
+                        <img class="object-fit-container w-100 h-100" src="./files/p_der.webp" style="z-index: 1;">
                     </div>
                     <div class="d-flex gap-2">
                         <div class="container-card">
@@ -419,7 +419,7 @@
                         class="card-yugi shadow-smpl position-relative d-flex justify-content-center align-items-center">
                         <span class="text-cards" style="z-index: 3;">PENDULUM CARDS</span>
                         <span class="position-absolute w-100 h-100 bg-primary bg-opacity-50" style="z-index: 2;"></span>
-                        <img class="object-fit-container w-100 h-100" src="./files/p_izq.png" style="z-index: 1;">
+                        <img class="object-fit-container w-100 h-100" src="./files/p_izq.webp" style="z-index: 1;">
                     </div>
                 </div>
                 <div class="d-flex flex-row gap-2">
@@ -532,7 +532,7 @@
                                 <span class="text-cards" style="z-index: 3;">PENDULUM CARDS</span>
                                 <span class="position-absolute w-100 h-100 bg-primary bg-opacity-50"
                                     style="z-index: 2;"></span>
-                                <img class="object-fit-container w-100 h-100" src="./files/p_izq.png"
+                                <img class="object-fit-container w-100 h-100" src="./files/p_izq.webp"
                                     style="z-index: 1;">
                             </div>
                         </div>
@@ -560,7 +560,7 @@
                                 <span class="text-cards" style="z-index: 3;">PENDULUM CARDS</span>
                                 <span class="position-absolute w-100 h-100 bg-danger bg-opacity-50"
                                     style="z-index: 2;"></span>
-                                <img class="object-fit-container w-100 h-100" src="./files/p_der.png"
+                                <img class="object-fit-container w-100 h-100" src="./files/p_der.webp"
                                     style="z-index: 1;">
                             </div>
                         </div>
@@ -677,7 +677,7 @@
                                 <span class="text-cards" style="z-index: 3;">PENDULUM CARDS</span>
                                 <span class="position-absolute w-100 h-100 bg-primary bg-opacity-50"
                                     style="z-index: 2;"></span>
-                                <img class="object-fit-container w-100 h-100" src="./files/p_izq.png"
+                                <img class="object-fit-container w-100 h-100" src="./files/p_izq.webp"
                                     style="z-index: 1;">
                             </div>
                         </div>
@@ -705,7 +705,7 @@
                                 <span class="text-cards" style="z-index: 3;">PENDULUM CARDS</span>
                                 <span class="position-absolute w-100 h-100 bg-danger bg-opacity-50"
                                     style="z-index: 2;"></span>
-                                <img class="object-fit-container w-100 h-100" src="./files/p_der.png"
+                                <img class="object-fit-container w-100 h-100" src="./files/p_der.webp"
                                     style="z-index: 1;">
                             </div>
                         </div>
@@ -921,7 +921,7 @@
             </section>
         </div>
     </main>
-    <img class="position-absolute bottom-0 end-0 m-4" src="./files/logo.png" alt="Yu-Gi-Oh! Logo" style="width: 15rem;">
+    <img class="position-absolute bottom-0 end-0 m-4" src="./files/logo.webp" alt="Yu-Gi-Oh! Logo" style="width: 15rem;">
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/custom.js"></script>
 </body>
